test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/storage_test_contract/src/main.sw
contract;

storage {
    x: u64 = 64,
}

abi MyContract {
    #[storage(read)]
    fn get_value() -> u64;
}

impl MyContract for Contract {
    #[storage(read)]
    fn get_value() -> u64 {
        storage.x.read()
    }
}
